--- a/sass/layout/_projects.scss
+++ b/sass/layout/_projects.scss
@@ -1,4 +1,5 @@
 .projects {
+    padding-top: 10rem;
     &__text {
         width: 80%;
         margin: auto;
